--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,10 +9,9 @@ license = "MIT"
 
 [dependencies]
 clap = { version = "4.5.2", default-features = false, features = ["derive", "std", "help", "usage"] }
+irc-connect = { version = "0.1.0", features = ["ring", "tls12"] }
 rustls-pemfile = "2.1.1"
 tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "net", "time", "io-util", "io-std", "fs"] }
-tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring", "tls12"] }
-tokio-socks = "0.5.1"
 
 [profile.smol]
 inherits = "release"
